--- a/src/4.API/API/Resources/ExceptionLocalization/ExceptionResource.resx
+++ b/src/4.API/API/Resources/ExceptionLocalization/ExceptionResource.resx
@@ -117,7 +117,19 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="NOT_FOUND_ENTITY" xml:space="preserve">
+  <data name="Application.DTOs.CUSTOMER_IS_REQUIRED" xml:space="preserve">
+    <value>Customer field is required</value>
+  </data>
+  <data name="Application.DTOs.MESSAGE_IS_REQUIRED" xml:space="preserve">
+    <value>Message field is required</value>
+  </data>
+  <data name="Application.DTOs.MESSAGE_MAX_LENGTH_500" xml:space="preserve">
+    <value>Message field has maximum 500 characters</value>
+  </data>
+  <data name="Infrastructure.Repositories.CANNOT_MAP_ENTITY" xml:space="preserve">
+    <value>Cannot map entity</value>
+  </data>
+  <data name="Infrastructure.Repositories.NOT_FOUND_ENTITY" xml:space="preserve">
     <value>Entity not found</value>
   </data>
 </root>
